--- a/todolist/contents/todo.html
+++ b/todolist/contents/todo.html
@@ -14,7 +14,7 @@
     <title>ToDo TODAY</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./bootstrap-dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="todo-cmn.css" rel="stylesheet">
@@ -92,7 +92,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="./dist/js/bootstrap.min.js"></script>
+    <script src="./bootstrap-dist/js/bootstrap.min.js"></script>
     <script src="knockout-3.3.0.js"></<script>
     </script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
