--- a/todolist/contents/todo.html
+++ b/todolist/contents/todo.html
@@ -60,29 +60,25 @@
     <div class="container">
       <div class="row">
         <!-- One ToDo -->
-        <div class="col-lg-6">
-          <div class="input-group">
-            <span class="input-group-btn">
-              <button class="btn btn-success" type="button" data-bind="click: doneTodo" ><span data-bind="text: buttonName"></span></button>
-            </span>
-            <input type="text" class="form-control" placeholder="What To Do" data-bind="disable: todoDisable, css: todoDisableCss" />
-          </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-        <div class="space-v-1"/>
+        <span data-bind="foreach: todoList">
+          <div class="col-lg-6">
+            <div class="input-group">
+              <span class="input-group-btn">
+                <button class="btn btn-success" type="button" data-bind="click: doneTodo" ><span data-bind="text: buttonName"></span></button>
+              </span>
+              <input type="text" class="form-control" placeholder="What To Do" data-bind="disable: todoDisable, css: todoDisableCss" />
+            </div><!-- /input-group -->
+          </div><!-- /.col-lg-6 -->
+          <div class="space-v-1"/>
+        </span>
         <!-- /One ToDo -->
 
-        <!-- One ToDo -->
-        <div class="col-lg-6">
-          <div class="input-group">
-            <span class="input-group-btn">
-              <button class="btn btn-success" type="button" ><span data-bind="text: buttonName"></span></button>
-            </span>
-            <input type="text" class="form-control" placeholder="What To Do" />
-          </div><!-- /input-group -->
-        </div><!-- /.col-lg-6 -->
-        <div class="space-v-1"/>
-        <!-- /One ToDo -->
-      </div><!-- /.row -->
+        <!-- Add Button -->
+        <div class="col-lg-1">
+          <button type="button" class="btn btn-default" data-bind="click: addToDo">Add ToDo</button>
+        </div>
+        <!-- /Add Button -->
+
     </div>
 
     </div><!-- /.container -->
@@ -100,20 +96,37 @@
 
     <!-- tmp -->
     <script type="text/javascript">
-      var toDoListView = {
 
-        defaultTodo: "What To Do!", // Default Todo String
-        buttonName: "Done", // Default Button Name
-        todoDisable: ko.observable(false), // Text Disable status, defult Text Input enable
-        todoDisableCss: ko.observable(""),
-        doneTodo: function() {
-          this.todoDisable(true);
-          this.todoDisableCss("todoDone");
-        }// if you click 'Done', Text Input disable
+    //One Todo
+    function toDoListView() {
+      var self = this;
+
+      self.defaultTodo = ko.observable("What To Do!"); // Default Todo String
+      self.buttonName = ko.observable("Done"); // Default Button Name
+      self.todoDisable = ko.observable(false); // Text Disable status, defult Text Input enable
+      self.todoDisableCss = ko.observable("");
+      self.doneTodo = function() {
+        self.todoDisable(true);
+        self.todoDisableCss("todoDone");
+      }// if you click 'Done', Text Input disable
+    };
+
+
+      //ToDo list
+      function todoListViewModel(){
+        var self = this;
+
+        self.addTodo = function(){
+          self.todoList.push(new toDoListView());
+        };
+
+        self.todoList = ko.observableArray();
+        self.addTodo();
+
       };
 
-      //  bind ViewModel
-      ko.applyBindings(toDoListView);
+      ko.applyBindings(new todoListViewModel());
+
     </script>
     </script>
   </body>
